# javelin-tui

./: .gitignore  Cargo.toml  README.md
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: ci.yml
datasets/: test_energy_query_6477e1f49290454d99945b2f51caebf8_metadata.json  test_seed_53229947901a4ceba623ccde89a55375_metadata.json
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_adjacency.lance/_transactions/: 0-040de4af-359e-4bdd-b8f9-2a6b9a8d9c94.txn
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_adjacency.lance/_versions/: 1.manifest
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_centroid_map.lance/_transactions/: 0-733e8c92-7ab3-4447-b6d3-79d88ea73730.txn
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_centroid_map.lance/_versions/: 1.manifest
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_cluster_assignments.lance/_transactions/: 0-07adde1c-e624-49bd-9759-15f728537bc9.txn
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_cluster_assignments.lance/_versions/: 1.manifest
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_item_norms.lance/_transactions/: 0-831dd8f6-c645-4f37-b049-c3cddb9f646d.txn
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_item_norms.lance/_versions/: 1.manifest
datasets/test_energy_query_6477e1f49290454d99945b2f51caebf8_lambdas.lance/_versions/: 1.manifest
src/: datasets.rs  display.rs  display_1d.rs  display_coo.rs  display_transposed.rs  functions.rs  lib.rs  main.rs
src/display/: display.rs  display_1d.rs  display_coo.rs  display_sparse_viz.rs  display_transposed.rs  mod.rs
src/functions/: display.rs  functions.rs  generate.rs  head.rs  info.rs  mod.rs  sample.rs  sparse_viz.rs  stats.rs  tui.rs
src/tests/: mod.rs  test_functions.rs
(+25 files in other folders)
